<resources>
    <string name="app_name">CryptoSky</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_coin">Add Coin</string>
    <string name="appicon">AppIcon</string>
    <string name="creator">Készítette: D. Dávid</string>
    <string name="all_rights_reserved">All rights reserved</string>
    <string name="_2021">2021</string>
    <string name="rank">Rank:</string>
    <string name="symbol">Symbol:</string>
    <string name="name">Name:</string>
    <string name="avaiable_supply_for_trading">Avaiable supply for trading:</string>
    <string name="total_quantity_of_asset_issued">Total quantity of asset issued:</string>
    <string name="quiantity_of_trading_volume_represented_in_usd_over_the_last_24_hours">Quiantity of trading volume represented in USD over the last 24 hours:</string>
    <string name="volume_weighted_price_based_on_real_time_market_data_translated_to_usd">Volume-weighted price based on real-time market data, translated to USD:</string>
    <string name="the_direction_and_value_change_in_the_last_24_hours">The direction and value change in the last 24 hours:</string>
    <string name="supply_x_price">Supply x price</string>
    <string name="cryptosky">CryptoSky</string>
    <string name="coin_name">COIN_NAME</string>
    <string name="_999">999</string>
    <string name="nextpage"><![CDATA[>]]></string>
</resources>